--- a/ARQUIVO-TRABALHO/style.css
+++ b/ARQUIVO-TRABALHO/style.css
@@ -1,47 +1,131 @@
-*
-.cabecalho{
-    background-color: #0a0105;
-    color: #e6117b;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20px 0;
+*{
+    margin: 0;
+    padding: 0;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    font-family: "Inter",sans-serif;
 }
 .cabecalho-imagem{
-    width: 15%;
-    padding-left: 2px;
-    padding-top: 0px;
+    width: 7%;
+    display: flex;
+    align-items: center;
 }
-.cabecalho-lista-item{
+
+header {
+    display: flex;
+    width: 100%;
+    height: 90px;
+    background: #0a0a0a;
+}
+
+header .container-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     text-decoration: none;
-    color: white;
-    display: inline-block;
-    margin: o 16px;
-    font-size: 24px;
-} 
-.cabecalho-lista-item :hover{
-    color: #e6117b;
-    background-color: aliceblue;
-    transition: 0.5s;
-    opacity: 0.5;
+    width: 100%;
+    height: 100%;
+    padding: 0 2em;
 }
+
+header .container-header nav {
+    display: flex;
+    list-style-type: none;
+}
+
+header .container-header nav li a {
+    font-weight: 400;
+    color: #5826e0;
+    text-decoration: none;
+    margin-left: 15px;
+    padding: 0.8rem;
+}
+
+header .container-header nav li a.active:hover {
+    color: #6810da;
+            background-color: #fff; 
+            transition: 0.5s;
+            opacity: 0.5;
+}
+
+header .container-header nav li a.active {
+    font-weight: 600;
+    text-decoration: none;
+    margin-left: 15px;
+}
+
+header .container-header .search-container input {
+    background: #504650;
+    border: 0;
+    padding: 7px 10px;
+    border-radius: 7px;
+    width: 200px;
+    outline: 0;
+    color: #fff;
+}
+
+header .container-header .search-container input::placeholder {
+    color: #fff;
+}
+  
+  header .container-header .search-container {
+    display: flex;
+}
+  
+  header .container-header .search-container button {
+    background: #504650;
+    color: #eee8e8;
+    border: 0;
+    border-radius: 5px;
+    padding: 7px 15px;
+    margin-left: 10px;
+    cursor: pointer;
+    outline: 0;
+}
+
+header .container-header .mobile-menu {
+    display: none;
+}
+  
+  header .container-header .mobile-menu img {
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+  
+  @media (max-width: 768px) {
+    header .container-header .search-container {
+      display: none;
+    }
+    
+    header .container-header nav {
+      display: none;
+    }
+    
+     header .container-header .mobile-menu {
+      display: block;
+    }
+}
+
 #banner {
     width: 100%;
 }
 
 .principal {
-    background: #b8678d;
-    padding: 30px;
+    background: #413641;
+    padding: 35px;
 }
 
 .titulo-principal {
     padding-left: 100px;
-    font-size: 35px;
 }
 
 .titulo-centralizado {
     text-align: center;
-    padding: 50px;
+    font-size: 25px;
 }
 
 p {
@@ -53,25 +137,55 @@ p {
 }
 
 strong {
-    color: #bb0bf1;
+    color: #413641;
 }
 
 .itens {
     font-style: italic;
-    padding: 30px;
+    padding: 15px;
 }
 
 .beneficios {
-    background: #e463bd;
-    padding: 50px;
+    background: #665959;
+    padding: 60px;
 }
 
 ul {
-    display: inline-block;
+    display: list-item;
     vertical-align: top;
-    width: 20%;
+    width: 15%;
+    max-width: 15%;
 }
 
 .imagembeneficios {
-    width: 49%;
+    width: 36%;
+    position: relative;
 }
+
+.noivo {
+    background-color: #413641;
+}
+.imagemnoivo {
+    width: 40%;
+}
+
+.tftable {
+    align-self: start;
+}
+<style type="text/css"> 
+table.tftable {font-size:12px;color:#333333;width:100%;border-width: 1px;border-color: #a9a9a9;border-collapse: collapse;}
+table.tftable th {font-size:12px;background-color:#665959;border-width: 1px;padding: 8px;border-style: solid;border-color: #0a0a0a33;text-align:left;}
+table.tftable tr {background-color:#978383;}
+table.tftable td {font-size:12px;border-width: 1px;padding: 8px;border-style: solid;border-color: #030303;}
+</style>
+
+.rodape{
+    background-color: #413641;
+    color: #070707;
+    text-align: center;
+    padding: 40px 0;
+}
+
+
+
+
