--- a/ARQUIVO-TRABALHO/style.css
+++ b/ARQUIVO-TRABALHO/style.css
@@ -179,12 +179,25 @@ table.tftable tr {background-color:#978383;}
 table.tftable td {font-size:12px;border-width: 1px;padding: 8px;border-style: solid;border-color: #030303;}
 </style>
 
+
+.imgcorleone1{
+    width: 25%;
+}
+.imgcorleone2 {
+    width: 15;
+}
+.imgcorleone3 {
+    width: 14.5;
+}
+
 .rodape{
     background-color: #413641;
     color: #070707;
     text-align: center;
     padding: 40px 0;
 }
+
+
 
 
 
