--- a/ARQUIVO-TRABALHO/style.css
+++ b/ARQUIVO-TRABALHO/style.css
@@ -9,7 +9,7 @@
     font-family: "Inter",sans-serif;
 }
 .cabecalho-imagem{
-    width: 7%;
+    width: 5%;
     display: flex;
     align-items: center;
 }
@@ -18,12 +18,13 @@ header {
     display: flex;
     width: 100%;
     height: 90px;
-    background: #0a0a0a;
+    background: #e87ad9;
 }
 
 header .container-header {
     display: flex;
-    align-items: center;
+    align-items: center; 
+    width: 25%;
     justify-content: space-between;
     text-decoration: none;
     width: 100%;
@@ -45,7 +46,7 @@ header .container-header nav li a {
 }
 
 header .container-header nav li a.active:hover {
-    color: #6810da;
+    color: #7106fd;
             background-color: #fff; 
             transition: 0.5s;
             opacity: 0.5;
@@ -58,7 +59,7 @@ header .container-header nav li a.active {
 }
 
 header .container-header .search-container input {
-    background: #504650;
+    background: #ef2bef;
     border: 0;
     padding: 7px 10px;
     border-radius: 7px;
@@ -68,7 +69,7 @@ header .container-header .search-container input {
 }
 
 header .container-header .search-container input::placeholder {
-    color: #fff;
+    color: #f3ebeb;
 }
   
   header .container-header .search-container {
@@ -76,7 +77,7 @@ header .container-header .search-container input::placeholder {
 }
   
   header .container-header .search-container button {
-    background: #504650;
+    background: #ef2bef;
     color: #eee8e8;
     border: 0;
     border-radius: 5px;
@@ -111,12 +112,16 @@ header .container-header .mobile-menu {
 }
 
 #banner {
-    width: 100%;
+    width: 40%;
+    padding: 60px;
+   padding-left: 500px;
 }
 
 .principal {
-    background: #413641;
+    background: #f68fd9;
     padding: 35px;
+    
+    
 }
 
 .titulo-principal {
@@ -137,7 +142,7 @@ p {
 }
 
 strong {
-    color: #413641;
+    color: #1f10f4;
 }
 
 .itens {
@@ -146,7 +151,7 @@ strong {
 }
 
 .beneficios {
-    background: #665959;
+    background: #f68fd9;
     padding: 60px;
 }
 
@@ -158,15 +163,33 @@ ul {
 }
 
 .imagembeneficios {
-    width: 36%;
+    width: 20%;
     position: relative;
 }
 
-.noivo {
-    background-color: #413641;
+.pesos{
+    width: 20%;
 }
-.imagemnoivo {
-    width: 40%;
+
+.demencia {
+    width: 20%;
+}
+
+.IeII {
+    background-color: #e87ad9;
+}
+
+.prevenção {
+    background-color: #e87ad9;
+}
+
+
+
+.sintomas {
+    background-color: #e87ad9;
+}
+.ESTAGIO {
+    width: 20%;
 }
 
 .tftable {
@@ -174,28 +197,30 @@ ul {
 }
 <style type="text/css"> 
 table.tftable {font-size:12px;color:#333333;width:100%;border-width: 1px;border-color: #a9a9a9;border-collapse: collapse;}
-table.tftable th {font-size:12px;background-color:#665959;border-width: 1px;padding: 8px;border-style: solid;border-color: #0a0a0a33;text-align:left;}
-table.tftable tr {background-color:#978383;}
+table.tftable th {font-size:12px;background-color:#d12a2a;border-width: 1px;padding: 8px;border-style: solid;border-color: #0a0a0a33;text-align:left;}
+table.tftable tr {background-color:#ea2929;}
 table.tftable td {font-size:12px;border-width: 1px;padding: 8px;border-style: solid;border-color: #030303;}
 </style>
 
 
+.prevençao {
+   
+    background-color: #e87ad9;
+   
+;
+}
 .imgcorleone1{
-    width: 25%;
+   margin-left: 500px;
+    width: 15%;
+    background-color: #e87ad9;
 }
-.imgcorleone2 {
-    width: 15;
-}
-.imgcorleone3 {
-    width: 14.5;
+.sintoma {
+    box-align: center;
+    width: 15%;
+    background-color: #e87ad9;
 }
 
-.rodape{
-    background-color: #413641;
-    color: #070707;
-    text-align: center;
-    padding: 40px 0;
-}
+
 
 
 
